--- a/.travis.yml
+++ b/.travis.yml
@@ -220,6 +220,7 @@ script:
     fi'
   - cd ..
 
+  # NB: google's cpplint.py currently does not work with python3...
   - 'if [ "$lint" == "1" ]; then
       python ~/cpplint.py --extensions=cpp --headers=hpp --filter=-,+runtime/explicit,+whitespace/end_of_line --linelength=90 test/*.{cpp,hpp} src/*.cpp include/libtorrent/*.hpp include/libtorrent/kademlia/*.hpp src/kademlia/*.cpp include/libtorrent/aux_/*.hpp include/libtorrent/extensions/*.hpp simulation/*.{cpp,hpp} tools/*.{cpp,hpp} examples/*.{cpp,hpp};
     fi'
