--- a/docs/makefile
+++ b/docs/makefile
@@ -79,14 +79,14 @@ epub: $(TARGETS:=.epub) $(FIGURES:=.png)
 all: html pdf
 
 single-page-ref.rst: $(REFERENCE_TARGETS:=.rst)
-	python join_rst.py $(filter-out reference.rst, $(REFERENCE_TARGETS:=.rst)) >single-page-ref.rst
+	python3 join_rst.py $(filter-out reference.rst, $(REFERENCE_TARGETS:=.rst)) >single-page-ref.rst
 
 settings.rst hunspell/settings.dic: ../include/libtorrent/settings_pack.hpp hunspell/libtorrent.dic
-	python gen_settings_doc.py || { rm $@; exit 1; }
+	python3 gen_settings_doc.py || { rm $@; exit 1; }
 	cat hunspell/libtorrent.dic >>hunspell/settings.dic
 
 stats_counters.rst: ../src/session_stats.cpp ../include/libtorrent/performance_counters.hpp
-	python gen_stats_doc.py || { rm $@; exit 1; }
+	python3 gen_stats_doc.py || { rm $@; exit 1; }
 
 manual.rst: stats_counters.rst
 	touch manual.rst
@@ -98,19 +98,19 @@ manual.rst: stats_counters.rst
 #endif
 
 todo.html:gen_todo.py ../src/*.cpp ../include/libtorrent/*.hpp
-	python gen_todo.py
+	python3 gen_todo.py
 ifneq ($(STAGE),)
 	cp $@ $(WEB_PATH)/$@
 endif
 
 $(REFERENCE_TARGETS:=.rst) plain_text_out.txt:gen_reference_doc.py ../include/libtorrent/*.hpp ../include/libtorrent/kademlia/*.hpp manual.rst tuning.rst settings.rst stats_counters.rst hunspell/settings.dic
-	python gen_reference_doc.py --plain-output
+	python3 gen_reference_doc.py --plain-output
 
 spell-check:plain_text_out.txt $(MANUAL_TARGETS:=.html) manual.rst settings.rst
-	python filter-rst.py manual.rst >manual-plain.txt
-	python filter-rst.py tuning.rst >tuning-plain.txt
-	python filter-rst.py settings.rst >settings-plain.txt
-	python filter-rst.py upgrade_to_1.2.rst >upgrade-1_2-plain.txt
+	python3 filter-rst.py manual.rst >manual-plain.txt
+	python3 filter-rst.py tuning.rst >tuning-plain.txt
+	python3 filter-rst.py settings.rst >settings-plain.txt
+	python3 filter-rst.py upgrade_to_1.2.rst >upgrade-1_2-plain.txt
 	hunspell -d hunspell/en_US -p hunspell/libtorrent.dic -l plain_text_out.txt >hunspell-report.txt
 	hunspell -d hunspell/en_US -p hunspell/libtorrent.dic -l manual-plain.txt >>hunspell-report.txt
 	hunspell -d hunspell/en_US -p hunspell/libtorrent.dic -l tuning-plain.txt >>hunspell-report.txt
