only run flake8 once. Ignore a few new rules

--- a/.travis.yml
+++ b/.travis.yml
@@ -174,7 +174,6 @@ install:
   - 'if [ "$lint" == "1" ]; then curl "https://raw.githubusercontent.com/google/styleguide/71ec7f1e524969c19ce33cfc72e8e023f2b98ee2/cpplint/cpplint.py" >~/cpplint.py; fi'
   - 'if [ "$pylint" == "1" ]; then
       sudo pip3 install flake8;
-      flake8 --version;
       python3 -m flake8 --version;
     fi'
   - 'if [ $sonar_scan == "1" ]; then
@@ -224,8 +223,7 @@ script:
       python ~/cpplint.py --extensions=cpp --headers=hpp --filter=-,+runtime/explicit,+whitespace/end_of_line --linelength=90 test/*.{cpp,hpp} src/*.cpp include/libtorrent/*.hpp include/libtorrent/kademlia/*.hpp src/kademlia/*.cpp include/libtorrent/aux_/*.hpp include/libtorrent/extensions/*.hpp simulation/*.{cpp,hpp} tools/*.{cpp,hpp} examples/*.{cpp,hpp};
     fi'
   - 'if [ "$pylint" == "1" ]; then
-      flake8 --max-line-length=120;
-      python3 -m flake8 --max-line-length=120;
+      python3 -m flake8 --max-line-length=120 --ignore=E741,W504,E126,W503,E121;
     fi'
   - 'if [ "$sonar_scan" == "1" ]; then
        build-wrapper-linux-x86-64 --out-dir bw-output ${B2} -a -j2 optimization=off crypto=$crypto deprecated-functions=off $toolset variant=$variant -l300 &&
