--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -41,6 +41,7 @@ file(GLOB XML_ASSETS "${CMAKE_CURRENT_SOURCE_DIR}/*.xml")
 file(COPY ${XML_ASSETS} DESTINATION "${CMAKE_CURRENT_BINARY_DIR}")
 
 file(COPY "utf8_test.txt" DESTINATION "${CMAKE_CURRENT_BINARY_DIR}")
+file(COPY "utf8_latin1_test.txt" DESTINATION "${CMAKE_CURRENT_BINARY_DIR}")
 file(COPY "mutable_test_torrents" DESTINATION "${CMAKE_CURRENT_BINARY_DIR}")
 file(COPY "test_torrents" DESTINATION "${CMAKE_CURRENT_BINARY_DIR}")
 file(COPY "ssl" DESTINATION "${CMAKE_CURRENT_BINARY_DIR}")
