--- a/docs/makefile
+++ b/docs/makefile
@@ -66,7 +66,8 @@ FIGURES = \
 	utp_stack \
 	storage \
 	disk_cache \
-	troubleshooting
+	troubleshooting \
+	screenshot_thumb
 
 html: $(TARGETS:=.html) $(FIGURES:=.png) todo.html
 
@@ -90,6 +91,12 @@ stats_counters.rst: ../src/session_stats.cpp ../include/libtorrent/performance_c
 
 manual.rst: stats_counters.rst
 	touch manual.rst
+
+screenshot_thumb.png: screenshot.png
+	convert $? -resize 400 $@
+ifneq ($(STAGE),)
+	cp $@ $(WEB_PATH)/$@
+endif
 
 #troubleshooting_thumb.png: troubleshooting.png
 #	convert troubleshooting.png -resize 800x800 troubleshooting_thumb.png
