--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -151,8 +151,11 @@ EXTRA_DIST = Jamfile \
   invalid1.gz \
   utf8_test.txt \
   web_server.py \
+  root1.xml \
+  root2.xml \
+  root3.xml \
   socks.py \
-  http.py \
+  http_proxy.py \
   CMakeLists.txt
 
 EXTRA_PROGRAMS = $(test_programs)
