--- a/appveyor.yml
+++ b/appveyor.yml
@@ -10,22 +10,22 @@ clone_depth: 1
 environment:
   matrix:
     - cmake: 1
-    - variant: test_debug
+    - variant: debug
       compiler: msvc-14.1
       model: 64
       sim: 1
-    - variant: test_debug
+    - variant: debug
       compiler: msvc-14.1
       model: 32
       bjam: 1
-    - variant: test_release
+    - variant: release
       compiler: msvc-14.1
       model: 64
       python: 1
       python_dist: 1
       crypto: openssl
       bjam: 1
-    - variant: test_debug
+    - variant: debug
       compiler: gcc
       model: 32
       crypto: openssl
@@ -94,7 +94,7 @@ build_script:
   # simulations
   - cd %ROOT_DIRECTORY%\simulation
   - if defined sim (
-    b2.exe --hash openssl-version=pre1.1 warnings=all warnings-as-errors=on -j %NUMBER_OF_PROCESSORS% %compiler% address-model=%model% debug-iterators=off picker-debugging=on invariant-checks=full test_debug boost-link=default link=static crypto=built-in define=BOOST_ASIO_DISABLE_IOCP asserts=on testing.execute=off
+    b2.exe --hash openssl-version=pre1.1 warnings=all warnings-as-errors=on -j %NUMBER_OF_PROCESSORS% %compiler% address-model=%model% debug-iterators=off picker-debugging=on invariant-checks=full debug boost-link=default link=static crypto=built-in define=BOOST_ASIO_DISABLE_IOCP asserts=on testing.execute=off
     )
 
   # minimal support for cmake build
@@ -136,5 +136,5 @@ test_script:
   # certain unexpected terminations (through exceptions)
   - cd %ROOT_DIRECTORY%\simulation
   - if defined sim (
-    b2.exe --hash openssl-version=pre1.1 warnings-as-errors=on -j %NUMBER_OF_PROCESSORS% %compiler% address-model=%model% debug-iterators=off picker-debugging=on invariant-checks=full test_debug boost-link=default link=static crypto=built-in define=BOOST_ASIO_DISABLE_IOCP asserts=on
+    b2.exe --hash openssl-version=pre1.1 warnings-as-errors=on -j %NUMBER_OF_PROCESSORS% %compiler% address-model=%model% debug-iterators=off picker-debugging=on invariant-checks=full debug boost-link=default link=static crypto=built-in define=BOOST_ASIO_DISABLE_IOCP asserts=on
     )
