fix examples' cmake linking errors

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -1,3 +1,4 @@
+cmake_minimum_required(VERSION 3.13)
 project(libtorrent-examples)
 
 set(single_file_examples
@@ -9,9 +10,12 @@ set(single_file_examples
     connection_tester
     upnp_test)
 
+find_package(Boost REQUIRED COMPONENTS system)
+find_package(Threads REQUIRED)
+
 foreach(example ${single_file_examples})
     add_executable(${example} "${example}.cpp")
-    target_link_libraries(${example} PRIVATE torrent-rasterbar)
+    target_link_libraries(${example} PRIVATE torrent-rasterbar ${Boost_SYSTEM_LIBRARY} ${CMAKE_THREAD_LIBS_INIT})
 endforeach(example)
 
 add_executable(client_test
@@ -19,4 +23,4 @@ add_executable(client_test
     print.cpp
     torrent_view.cpp
     session_view.cpp)
-target_link_libraries(client_test PRIVATE torrent-rasterbar)
+target_link_libraries(client_test PRIVATE torrent-rasterbar ${Boost_SYSTEM_LIBRARY} ${CMAKE_THREAD_LIBS_INIT})
