--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -678,9 +678,9 @@ else()
 	target_compile_definitions(torrent-rasterbar PUBLIC TORRENT_DISABLE_DHT)
 endif()
 
-# Boost		
-￼find_public_dependency(Boost REQUIRED COMPONENTS system)		
-￼target_include_directories(torrent-rasterbar PUBLIC ${Boost_INCLUDE_DIRS})
+# Boost
+find_public_dependency(Boost REQUIRED COMPONENTS system)
+target_include_directories(torrent-rasterbar PUBLIC ${Boost_INCLUDE_DIRS})
 
 if (exceptions)
 	if (MSVC)
